# singularity-boot-splash

./: .gitmodules  README.md  meson.build
src/: boot_splash_main.c
